Progress with composite Cubes